--- a/MsftBuild.Model/SampleFormats/Xaml/Project.xaml
+++ b/MsftBuild.Model/SampleFormats/Xaml/Project.xaml
@@ -1,4 +1,4 @@
-﻿<model:Project x:Class="MsftBuild.Projects.Project"
+﻿<model:Project x:Class="SampleFormats.Xaml.Project"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
