Working console sample for Xaml and JSON.

--- a/MsftBuild.Model/SampleFormats/Xaml/Processor.xaml
+++ b/MsftBuild.Model/SampleFormats/Xaml/Processor.xaml
@@ -1,11 +1,13 @@
-﻿<model:Processor x:Class="SampleFormats.Xaml.Processor"
+﻿<model:Processor
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:model="clr-namespace:MsftBuild.Model;assembly=MsftBuild.Model"
 	xmlns:tasks="clr-namespace:Contoso.Tasks;assembly=Contoso.Tasks"
-	mc:Ignorable="d">
-	<model:BuildTask />
+>
+	<model:MessageTask Message="Welcome to the MsftBuild POCO-based Proof of Concept Application.  Building your provided input..." />
+	<model:AssignCurrentDirectoryTask />
 	<tasks:CustomTask SomeProperty="Hello World!" SomeDate="11/23/2016" SomeNumber="123456789" />
+	<model:BuildProjectTask />
+	<model:MessageTask Message="Build completed." />
+	<model:ReadKeyTask Message="Press Enter to Continue..." Exiting="Now Exiting... Have a Nice Day. :)" />
 </model:Processor>
