--- a/Blazor.DelayYield.Unresponsive/RazorClassLibrary1/OperationContentContainer.razor
+++ b/Blazor.DelayYield.Unresponsive/RazorClassLibrary1/OperationContentContainer.razor
@@ -1,6 +1,5 @@
-﻿@typeparam T
-
-@inherits ActiveContentTemplateComponentBase<T>
+﻿@using System.ComponentModel
+@inherits ActiveContentTemplateComponentBase<string>
 
 @if (Subject is null)
 {
@@ -26,7 +25,7 @@ else
 @code
 {
 	[Parameter]
-	public IResulting<T?>? Content
+	public HelloWorld? Content
 	{
 		get => _content;
 		set
@@ -37,9 +36,9 @@ else
 				Subject = null;
 			}
 		}
-	}	IResulting<T?>? _content;
+	}	HelloWorld? _content;
 
-	Task<T?>? Subject { get; set; }
+	Task<string?>? Subject { get; set; }
 
 	bool Loaded
 	{
@@ -66,11 +65,11 @@ else
 
 	protected override Task OnParametersSetAsync() => Subject ?? base.OnParametersSetAsync();
 
-	Task<T?> DetermineSubject()
+	Task<string?> DetermineSubject()
 	{
 		try
 		{
-			var content = Content ?? Defaulting<T>.Default;
+			var content = Content ?? throw new InvalidOperationException();
 			var result = content.Get();
 			return result;
 		}
