--- a/Syncfusion.AdaptiveGrid/DataGrid_Server/Pages/Index.razor
+++ b/Syncfusion.AdaptiveGrid/DataGrid_Server/Pages/Index.razor
@@ -11,10 +11,10 @@
 	        <div class="e-mobile-layout">
 			    <DataGrid Mode="DataGrid.DisplayMode.Adaptive" />
 		    </div>
-
             break;
     }
 </div>
+This content is below.
 
 @code{
     protected override void OnAfterRender(bool firstRender)
