--- a/Syncfusion.DropDownList/Syncfusion.DropDownList/Pages/FetchData.razor
+++ b/Syncfusion.DropDownList/Syncfusion.DropDownList/Pages/FetchData.razor
@@ -68,7 +68,7 @@
         border-top-width: 60px;
         border-bottom-width: 60px;
         border-radius: 36px;
-        box-shadow: 0 0px 2px rgb(144 144 144), 0 0px 10px rgb(0 0 0 / 16%);
+        box-shadow: 0 0px 2px rgb(144 144 144), 0 0px 10px;
     }
 
         /* The horizontal line on the top of the device */
