--- a/Syncfusion.DropDownList/Syncfusion.DropDownList/Pages/_Host.cshtml
+++ b/Syncfusion.DropDownList/Syncfusion.DropDownList/Pages/_Host.cshtml
@@ -16,6 +16,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="DataGrid_Server.styles.css" rel="stylesheet" />
     <link href="_content/Syncfusion.Blazor/styles/material.css" rel="stylesheet" />
+    <script src="https://cdn.syncfusion.com/blazor/20.2.40/syncfusion-blazor.min.js" type="text/javascript"></script>
     <link href="~/_content/Radzen.Blazor/css/software.css" rel="stylesheet" />
     <script src="~/resized.js"></script>
 </head>
