--- a/Syncfusion.EfCore/Syncfusion.EfCore/Pages/_Host.cshtml
+++ b/Syncfusion.EfCore/Syncfusion.EfCore/Pages/_Host.cshtml
@@ -16,6 +16,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="~/_content/Syncfusion.Blazor/styles/bootstrap.css" rel="stylesheet" />
     <link href="Syncfusion.EfCore.styles.css" rel="stylesheet" />
+    <script src="https://cdn.syncfusion.com/blazor/24.1.47/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
