--- a/Syncfusion.DropDown.Flicker/BlazorApp4/Pages/Index.razor
+++ b/Syncfusion.DropDown.Flicker/BlazorApp4/Pages/Index.razor
@@ -4,8 +4,13 @@
 @using Syncfusion.Blazor.Data
 <div class="col-lg-12 control-section">
     <div class="control-wrapper">
+        <div class="d-flex align-items-center">
+            <div class="column-image"></div>
+            <h5 class="column-first mt-2 mb-2 text-center">#</h5>
+            <h5 class="column-second mt-2 mb-2 text-center">User Name</h5>
+        </div>
         <label class="example-label">Select an item</label>
-        <SfComboBox TValue="string" TItem="Record" Placeholder="e.g. Item 1" DataSource="@Records" Query="@LocalDataQuery" PopupHeight="130px" EnableVirtualization="true">
+        <SfComboBox TValue="string" TItem="Record" Placeholder="e.g. Item 1" DataSource="@Records" Query="@LocalDataQuery" PopupHeight="230px" EnableVirtualization="true" Width="640px">
             <ComboBoxFieldSettings Text="Text" Value="ID" />
             <ComboBoxTemplates TItem="Record">
                 <HeaderTemplate>
@@ -18,7 +23,7 @@
                 <ItemTemplate Context="view">
                     <div class="d-flex align-items-center">
                         <div class="column-image">
-                            <img src="blank.gif" width="64" height="64" />
+                            <img src="blank.gif" width="135" height="@view.Height" />
                         </div>
                         <div class="column-first text-center">#@view.ID</div>
                         <div class="column-second text-center text-truncate" title="@view.Text">@view.Text</div>
@@ -33,6 +38,8 @@
     public Query LocalDataQuery = new Query().Take(6);
     public class Record
     {
+        public int Height { get; set; }
+
         public string ID { get; set; }
         public string Text { get; set; }
     }
@@ -40,6 +47,7 @@
     {
         this.Records = Enumerable.Range(1, 150).Select(i => new Record()
         {
+            Height = Random.Shared.Next(32, 135),
             ID = i.ToString(),
             Text = "Item " + i,
         }).ToList();
@@ -47,7 +55,7 @@
 }
 <style>
     .control-wrapper {
-        max-width: 240px;
+        max-width: 800px;
         margin: 0 auto;
         padding: 50px 0px 0px;
     }
